@@ -4,6 +4,8 @@ The 'isync' compatibility wrapper was removed.
 
 The IMAP '$Forwarded' / Maildir 'P' (passed) flag is supported now.
 
+Support for configuring a TLS cipher string was added.
+
 [1.3.0]
 
 Network timeout handling has been added.
